--- a/projects/calculator/index.html
+++ b/projects/calculator/index.html
@@ -30,7 +30,7 @@
             <div class="box-title">
                 Calculadora
             </div><br>
-            <p id="resultado"></p>
+            <input id="resultado" disabled></input>
             <table>
                 <tr>
                     <td><button class="botao" onclick="clean()">C</td>
@@ -76,8 +76,7 @@
             <a class="footer-custom" href="/projects/calculator-imc/index.html">Calcular IMC</a>
         </div>
         <div class="footer-right">
-            <a href="https://www.linkedin.com/in/ricardo-rodrigues-2a1930251/"><i
-                    class="fa fa-linkedin footer-icon-custom"></i></a>
+            <a href="https://www.linkedin.com/in/ricardo-rodrigues-2a1930251/"><i class="fa fa-linkedin footer-icon-custom"></i></a>
             <a href="https://github.com/Ricardo-Rodrigues0"><i class="fa fa-github footer-icon-custom"></i></a>
             <a href="https://discord.com/users/719956528462954618"><i class="bi bi-discord footer-icon-custom"></i></a>
         </div>
