--- a/index.html
+++ b/index.html
@@ -43,17 +43,16 @@
             © Projeto sendo desenvolvido afins de estudos.
         </div>
         <div class="footer-left">
-            <a class="footer-custom" href="/index.html">Início</a>
+            <a class="footer-custom" href="/index.html" title="Início do projeto">Início</a>
             <a> | </a>
-            <a class="footer-custom" href="/projects/calculator/index.html">Calculadora</a>
+            <a class="footer-custom" href="/projects/calculator/index.html" title="Calculadora">Calculadora</a>
             <a> | </a>
-            <a class="footer-custom" href="/projects/calculator-imc/index.html">Calcular IMC</a>
+            <a class="footer-custom" href="/projects/calculator-imc/index.html" title="Calculadora de IMC">Calcular IMC</a>
         </div>
         <div class="footer-right">
-            <a href="https://www.linkedin.com/in/ricardo-rodrigues-2a1930251/"><i
-                    class="fa fa-linkedin footer-icon-custom"></i></a>
-            <a href="https://github.com/Ricardo-Rodrigues0"><i class="fa fa-github footer-icon-custom"></i></a>
-            <a href="https://discord.com/users/719956528462954618"><i class="bi bi-discord footer-icon-custom"></i></a>
+            <a href="https://www.linkedin.com/in/ricardo-rodrigues-2a1930251/" target="_blank" title="Perfil Linkedin"><i class="fa fa-linkedin footer-icon-custom" ></i></a>
+            <a href="https://github.com/Ricardo-Rodrigues0" target="_blank" title="Perfil GitHub"><i class="fa fa-github footer-icon-custom"></i></a>
+            <a href="https://discord.com/users/719956528462954618" target="_blank" title="Perfil Discord"><i class="bi bi-discord footer-icon-custom"></i></a>
         </div>
     </footer>
 </body>
